--- a/cssminiproject1/style.css
+++ b/cssminiproject1/style.css
@@ -9,7 +9,7 @@
     background: url("photo.jpg");
     background-size: cover;
 }
-.btn_one{
+.btn_one i{
     color: white;
     font-size: 30px;
     font-weight: 700;
@@ -17,27 +17,30 @@
     left: 16px;
     line-height: 60px;
     cursor: pointer;
+    transition: all 0.3s linear;
     }
 .sidebar_menu{
     position: fixed;
-    /* left: -300px; */
+    left: -300px;
     height: 100vh;
     width: 300px;
     background-color : rgba(255,255,255,0.1);
     box-shadow: 0 0 6px rgba(255,255,255,0.5);
+    transition: all 0.3s linear;
 }  
 .sidebar_menu .logo{
     position: absolute;
     width: 100%;
     line-height: 60px;
-    box-shadow: 0 0 4px rgba(255,255,255,0.5);;
+    box-shadow: 0 2px 4px rgba(255,255,255,0.5);
+    height: 60px;
 }
 .sidebar_menu .logo a{
     position: absolute;
     left: 50px;
     color: white;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 500;
 } 
 
@@ -54,6 +57,7 @@
     left: 275px;
     opacity:0 ;
     cursor: pointer;
+    transition: all 0.3s linear;
 }
 .sidebar_menu .menu li{
    margin-top: 6px;
@@ -91,11 +95,19 @@
     font-size: 30px;
     color: white;
     opacity: 0.5;}
- sidebar_menu .social_media i:hover{
+.sidebar_menu .social_media i:hover{
     opacity: 1;
     transform: scale(1.1);
  }
-#checked:checked ~ .sidebar_menu
- 
+#check:checked ~ .sidebar_menu
+{
+    left: 0;
+}
+#check:checked ~ .btn_one i{
+    opacity: 0;
+}
     
+#check:checked ~ .sidebar_menu .btn_two i{
+    opacity: 1;
+}
     
