--- a/spotifyclone/style.css
+++ b/spotifyclone/style.css
@@ -199,7 +199,8 @@ margin-left :0.75rem; ;
   
 .music-player{
    display: flex;
-
+   align-items: center;
+   justify-content: space-between;
 }
 
 .album{
@@ -212,3 +213,34 @@ margin-left :0.75rem; ;
 .controls{
   width: 25%;
 }
+.player-controls{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.player-control-icon{
+  margin-right: 1.5rem;
+  height: 1rem;
+  opacity: 0.7;
+}
+.player-control-icon:hover{
+  opacity: 1;
+}
+.progress-bar{
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-left: 1rem; */
+}
+.playback-bar{
+  width: 100%;
+  height: 0.5rem;
+  border-radius: 1rem;
+  margin-top: 0.5rem ;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
