--- a/spotifyclone/style.css
+++ b/spotifyclone/style.css
@@ -235,12 +235,40 @@ margin-left :0.75rem; ;
 }
 .playback-bar{
   width: 100%;
-  height: 0.5rem;
+  height: 0.15rem;
   border-radius: 1rem;
   margin-top: 0.5rem ;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
+.album {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 1rem;
+  margin-right: 5rem;
+  opacity: 0.7;
+}
+.hw{
+  height: 1rem;
+  margin: 0.55rem;
+}
+.album:hover{
+  opacity: 1;
+}
+.controls{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 1rem;
+  margin-right: 2rem;
+  opacity: 0.7;
+}
+.controls:hover{
+  opacity: 1;
+}
+
   
