--- a/spotifyclone/style.css
+++ b/spotifyclone/style.css
@@ -228,21 +228,29 @@ margin-left :0.75rem; ;
 }
 .progress-bar{
   width: 70%;
+  appearance: none;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  /* margin-left: 1rem; */
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.progress-bar::-webkit-slider-runnable-track {
+  height: 0.2rem;
+  background: #dddddd;
+  border: radius 100px; 
+}
+.progress-bar::-webkit-slider-thumb{
+  appearance: none;
+  height: 16px;
+  width: 16px;
+  background-color: #1bd760;
+  border-radius: 50%;
+  margin-top: -6px;
 }
 .playback-bar{
-  width: 100%;
-  height: 0.15rem;
-  border-radius: 1rem;
-  margin-top: 0.5rem ;
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
 }
 .album {
   display: flex;
@@ -270,5 +278,3 @@ margin-left :0.75rem; ;
 .controls:hover{
   opacity: 1;
 }
-
-  
