--- a/simonsay/style.css
+++ b/simonsay/style.css
@@ -6,7 +6,7 @@ body{
     width : 200px;
     border-radius: 20%;
     border: 10px solid black;
-    margin : 15px
+    margin : 15gitpx
 }
 .btn-container{
     display: flex;
